# terraform-platform-modules

./: .checkov.baseline  .envrc.sample  .gitignore  .pre-commit-config.yaml  .tool-versions  .trufflehogignore  CHANGELOG.md  README.md  aws_configtest_keys.py  aws_configtest_keys.yaml  aws_test_keys.py  aws_test_keys.yaml  aws_test_keys.yml  codecov.yml  pyproject.toml  pytest.ini  release-config.json  run-trufflehog.sh  temp.sh  terraform_tests.sh
postgres/: cloudwatch.tf  data-copy.tf  database-copy.tf  lambda.tf  locals.tf  main.tf  manage_users.py  providers.tf  pyproject.toml  rds.tf  secrets.tf  variables.tf
postgres/database-copy-pipeline/: artifactstore.tf  buildspec-dump.yml  buildspec-install-build-tools.yml  buildspec-load.yml  codebuild.tf  codepipeline.tf  iam.tf  locals.tf  scheduler.tf  variables.tf
postgres/database-copy-pipeline/tests/: unit.tftest.hcl
postgres/database-dump/: locals.tf  main.tf  outputs.tf  variables.tf
postgres/database-dump/tests/: unit.tftest.hcl
postgres/database-load/: locals.tf  main.tf  outputs.tf  variables.tf
postgres/database-load/tests/: unit.tftest.hcl
postgres/database-restore/: locals.tf  main.tf
postgres/database-restore/tests/: unit.tftest.hcl
postgres/manage-users/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
postgres/manage-users/manage_users/: manage_users.py
postgres/manage-users/tests/: conftest.py  test_manage_users.py
postgres/tests/: postgres.tftest.hcl  test_manage_users.py  unit.tftest.hcl
postgres/tests/database/: conftest.py  test_manage_users.py
s3/: main.tf  (+6 more)
(+208 files in other folders)
