[tool.poetry]
name = "manage-users"
version = "0.1.0"
description = ""
authors = ["Kate Sugden <kate.sugden@madetech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.162"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



